[package]
name = "syshmi-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.5", features = ["rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "fs"] }
toml = "0.9.10"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10.9"
semver = { version = "1.0", features = ["serde"] }
log = "0.4.22"
simplelog = "0.12.2"

